--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "dev"]
 	path = dev
     url = https://github.com/tensorflow/tensorflow.git
+[submodule "models"]
+	path = models
+	url = https://github.com/tensorflow/models/
+[submodule "3p2/psycopg2"]
+	path = 3p2/psycopg2
+	url = https://github.com/psycopg/psycopg2
